Link to plugin documentation on updated GitHub pages site
We no longer link to Mojohaus, after we generated and updated current
documentation for 1.13.M2 on branch 'gh-pages'.